# multi-ocr-poc

./: .env.example  .gitignore  main.py  pyproject.toml  textract_manager.py
client/: .gitignore  .prettierignore  README.md  components.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  sonar-project..properties.example  tsconfig.json  vite.config.ts  vitest.config.ts
client/.cursor/rules/: general.mdc  react.mdc  styles.mdc
client/.github/workflows/: sonarqube.yml
client/.storybook/: main.ts  preview.ts
client/mock/: auth.mock.ts
client/src/: App.tsx  main.tsx
client/src/__tests__/components/: admin-route.test.tsx  header.test.tsx  protected-route.test.tsx
client/src/components/: document-canvas-viewer.tsx  document-preview.tsx  extracted-results.tsx  navbar.tsx  previously-uploaded-panel.tsx  sidebar.tsx  upload-panel.tsx
client/src/i18n/: config.ts
client/src/pages/: home.tsx
client/src/stories/: badge.stories.tsx  button.stories.tsx  card.stories.tsx  dialog.stories.tsx  input.stories.tsx  radio-group.stories.tsx  select.stories.tsx  switch.stories.tsx  textarea.stories.tsx
client/src/test/: setup.ts  test-utils.ts
client/src/utils/: api.ts  form.ts  mockStorage.ts  store.ts  types.ts
controllers/: document_controller.py
output/json_output/: Invoice+Sample1_response.json
output/layout_output/: Invoice+Sample1_layout.json
routers/: document_router.py
server/: main.py  pyproject.toml
server/routers/: document_router.py
server/services/: textract_service.py
services/: document_service.py
(+12 files in other folders)
